--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="canonical" href="https://aarus2709.me/">
+    <link rel="canonical" href="https://slayzbs.github.io/portfolio/">
     <title>Slayz — Portfolio</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Portfolio of Aarav Gupta, a 16-year-old developer from France passionate about game development, web applications, and automation scripts.">
-    <meta name="author" content="Aarav Gupta">
+    <meta name="description" content="Portfolio of Slayz, a 16-year-old developer from France passionate about game development, web applications, and automation scripts.">
+    <meta name="author" content="Slayz">
     <meta name="keywords" content="Slayz, developer, portfolio, Python, JavaScript, game development, web development">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -19,7 +19,7 @@
 
     <!-- Open Graph / Social Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://aarus2709.me/">
+    <meta property="og:url" content="https://slayzbs.github.io/portfolio/">
     <meta property="og:title" content="Slayz — Portfolio">
     <meta property="og:description" content="Portfolio of Slayz, a 16-year-old developer from France passionate about game development, web applications, and automation scripts.">
     <meta property="og:site_name" content="Slayz - Portfolio">
@@ -29,7 +29,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Slayz — Portfolio">
     <meta property="twitter:description" content="Portfolio of Slayz, a 15-year-old developer from India passionate about game development, web applications, and automation scripts.">
-    <meta property="twitter:creator" content="@Aarav2709">
+    <meta property="twitter:creator" content="@.....">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
