--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <span class="name-char">S</span><span class="name-char">l</span><span class="name-char">a</span><span class="name-char">y</span><span class="name-char">z</span>
                 </span>
             </h1>
-            <p class="title">16-year-old french student.</p>
+            <p class="title">16 years old french student.</p>
             <div class="hero-links">
                 <a href="mailto:bs.slayz.bs@gmail.com">mail</a>
                 <a href="https://github.com/slayzbs" target="_blank" rel="noopener">github</a>
